[package]
name = "tagged-id"
version = "0.1.0"
authors = ["Yusuke Okamoto <y.okamoto@accelia.net>"]
edition = "2018"

[features]
default = []

serde = ["use_serde", "uuid/serde"]

[dependencies]
thiserror = "1.0"

[dependencies.uuid]
version = "0.8"
features = ["v4"]

[dependencies.use_serde]
package = "serde"
version = "1.0"
optional = true

[dependencies.diesel]
version = "1.4"
optional = true